<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/corebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corebutton"
        app:layout_constraintBottom_toTopOf="@+id/uibutton"
        app:layout_constraintEnd_toEndOf="@+id/uibutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/uibutton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/uibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uibutton"
        app:layout_constraintBottom_toTopOf="@+id/databutton"
        app:layout_constraintEnd_toEndOf="@+id/databutton"
        app:layout_constraintStart_toStartOf="@+id/databutton"
        app:layout_constraintTop_toBottomOf="@+id/corebutton" />

    <Button
        android:id="@+id/databutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/databutton"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/uibutton" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/databutton" />
</androidx.constraintlayout.widget.ConstraintLayout>