<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoreActivity">

    <Button
        android:id="@+id/toastbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toastbutton"
        app:layout_constraintBottom_toTopOf="@+id/snackbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/snackbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snackbutton"
        app:layout_constraintBottom_toTopOf="@+id/notificationbutton"
        app:layout_constraintEnd_toEndOf="@+id/toastbutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/toastbutton"
        app:layout_constraintTop_toBottomOf="@+id/toastbutton" />

    <Button
        android:id="@+id/notificationbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificationbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/snackbutton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/snackbutton"
        app:layout_constraintTop_toBottomOf="@+id/snackbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>